google-k8s/back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  replicas: 3
  selector:
    matchLabels:
      component: back
  template:
    metadata:
      labels:
        component: back
    spec:
      containers:
        - name: back
          image: robekeane/test-bot:0.24
          ports:
            - containerPort: 8008
